Updated full frontend: index, login, dashboard, UI upgrade

--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>OTT WALLAH — Premium OTT, Courses & Tools</title>
 
-  <!-- Google Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap">
-
-  <!-- Remix Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css">
-
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,7 +16,7 @@
 <header class="header neon-glow">
   <div class="container nav">
     
-    <a class="logo" href="#">
+    <a class="logo open-login">
       <i class="ri-clapperboard-fill"></i> OTT <span>WALLAH</span>
     </a>
 
@@ -42,7 +38,7 @@
 
 
 
-<!-- ============ FULL SCREEN HERO SLIDER ============ -->
+<!-- ============ FULL HERO SLIDER ============ -->
 <section class="hero">
 
   <div class="slider">
@@ -145,63 +141,6 @@
     <div class="card2 open-login"><img src="/uploads/Premiere.png"><h4>Premiere Presets</h4></div>
     <div class="card2 open-login"><img src="/uploads/AE.png"><h4>After Effects Packs</h4></div>
     <div class="card2 open-login"><img src="/uploads/Filmora.png"><h4>Filmora Plugins</h4></div>
-  </div>
-</section>
-
-
-
-<!-- ========== USER REVIEWS ========== -->
-<section class="section neon-box">
-  <div class="container section-head">
-    <h2><i class="ri-star-fill"></i> Customer Reviews</h2>
-  </div>
-
-  <div class="reviews container">
-    <div class="review open-login">
-      ⭐⭐⭐⭐⭐  
-      <p>"Sabse sasta & instant delivery. Highly recommended!"</p>
-    </div>
-
-    <div class="review open-login">
-      ⭐⭐⭐⭐⭐  
-      <p>"Netflix + Prime combo itna cheap kahi nahi mila!"</p>
-    </div>
-
-    <div class="review open-login">
-      ⭐⭐⭐⭐⭐  
-      <p>"Courses + Tools ka bundle OP hai."</p>
-    </div>
-  </div>
-</section>
-
-
-
-<!-- ========== WHY OTT WALLAH ========== -->
-<section class="section">
-  <div class="container section-head">
-    <h2><i class="ri-shield-check-fill"></i> Why Choose Us?</h2>
-  </div>
-
-  <div class="why grid container">
-    <div><i class="ri-flashlight-fill"></i><h4>Instant Delivery</h4></div>
-    <div><i class="ri-chat-3-fill"></i><h4>24x7 Support</h4></div>
-    <div><i class="ri-shield-star-fill"></i><h4>Trusted by 12k+ Users</h4></div>
-    <div><i class="ri-money-rupee-circle-fill"></i><h4>Lowest Price</h4></div>
-  </div>
-</section>
-
-
-
-<!-- ========== FAQ ========== -->
-<section class="section" id="faq">
-  <div class="container">
-    <h2><i class="ri-questionnaire-fill"></i> FAQ</h2>
-
-    <div class="faq">
-      <details class="open-login"><summary>Delivery kaise hoti hai?</summary></details>
-      <details class="open-login"><summary>Refund policy?</summary></details>
-      <details class="open-login"><summary>Payment safe hai?</summary></details>
-    </div>
   </div>
 </section>
 
