Updated index.html and google login fix

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 
     <div class="hero-buttons">
       <a class="btn-primary open-login"><i class="ri-flashlight-fill"></i> Explore All</a>
-      <a class="btn-dark open-login"><i class="ri-google-fill"></i> Login with Google</a>
+
+      <!-- FIXED GOOGLE LOGIN BUTTON -->
+      <a href="/auth/google" class="btn-dark">
+        <i class="ri-google-fill"></i> Login with Google
+      </a>
     </div>
 
     <div class="hero-stats">
