--- a/index.html
+++ b/index.html
@@ -1,69 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OTT WALLAH — Premium OTT, Courses & Tools</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Small in-file styles for modal & buy button if your style.css doesn't cover them */
+    .buy-btn { display:inline-block; padding:8px 12px; border-radius:8px; background:#06b6d4; color:#042; text-decoration:none; cursor:pointer; margin-top:8px; }
+    .modal-overlay{ position:fixed; inset:0; background:rgba(2,6,23,0.7); display:none; align-items:center; justify-content:center; z-index:9999; }
+    .modal-box{ background:#071025; color:#fff; padding:18px; border-radius:12px; width:90%; max-width:420px; box-shadow:0 10px 30px rgba(0,0,0,.6); }
+    .modal-box input, .modal-box textarea, .modal-box select{ width:100%; padding:10px; margin:8px 0; border-radius:8px; border:1px solid rgba(255,255,255,.06); background:rgba(255,255,255,.02); color:inherit; }
+    .modal-actions{ display:flex; gap:8px; justify-content:flex-end; margin-top:8px; }
+    .btn-secondary{ background:#111827; color:#fff; padding:10px 12px; border-radius:8px; border:none; cursor:pointer; }
+    .btn-primary{ background:#06b6d4; color:#022; padding:10px 12px; border-radius:8px; border:none; cursor:pointer; }
+    .order-msg{ margin-top:8px; color:#9fb0c9; font-size:14px; }
+  </style>
 </head>
 
 <body class="dark">
 
-<!-- ================== NAVBAR ================== -->
+<!-- NAVBAR -->
 <header class="header neon-glow">
   <div class="container nav">
-    
-    <a class="logo open-login">
+    <a class="logo">
       <i class="ri-clapperboard-fill"></i> OTT <span>WALLAH</span>
     </a>
 
     <nav class="nav-links">
-      <a class="open-login">OTT Apps</a>
-      <a class="open-login">Courses</a>
-      <a class="open-login">Editing Tools</a>
-      <a class="open-login">FAQ</a>
-
-      <button class="btn-login open-login">
-        <i class="ri-user-fill"></i> Login
-      </button>
+      <a>OTT Apps</a>
+      <a>Courses</a>
+      <a>Editing Tools</a>
+      <a>FAQ</a>
     </nav>
 
-    <button class="hamb open-login"><i class="ri-menu-3-line"></i></button>
-
+    <a href="https://wa.me/919837777006?text=Hi%20OTT%20WALLAH%2C%20I%20need%20help" class="btn-primary" style="text-decoration:none;">Contact</a>
   </div>
 </header>
 
-
-
-<!-- ============ FULL HERO SLIDER ============ -->
+<!-- HERO -->
 <section class="hero">
-
   <div class="slider">
     <div class="slides">
-      <img src="/uploads/banner1.png">
-      <img src="/uploads/banner2.png">
-      <img src="/uploads/banner3.png">
+      <img src="/uploads/banner1.png" alt="banner">
+      <img src="/uploads/banner2.png" alt="banner">
+      <img src="/uploads/banner3.png" alt="banner">
     </div>
   </div>
 
   <div class="hero-content container">
-    <h1 class="headline">
-      Unlimited <span>OTT</span>, <span>Courses</span> & <span>Editing Tools</span>
-    </h1>
-    <p class="subtext">
-      India's most premium digital marketplace at the cheapest price.
-    </p>
+    <h1 class="headline">Unlimited <span>OTT</span>, <span>Courses</span> & <span>Editing Tools</span></h1>
+    <p class="subtext">India's most premium digital marketplace at the cheapest price.</p>
 
     <div class="hero-buttons">
-      <a class="btn-primary open-login"><i class="ri-flashlight-fill"></i> Explore All</a>
-
-      <!-- FIXED GOOGLE LOGIN BUTTON -->
-      <a href="/auth/google" class="btn-dark">
-        <i class="ri-google-fill"></i> Login with Google
-      </a>
+      <a class="btn-primary" href="#collections"><i class="ri-flashlight-fill"></i> Explore All</a>
+      <!-- Quick buy example: opens modal with default product -->
+      <a class="buy-btn" onclick="openOrderModal('Starter Pack - All OTT Combo')"><i class="ri-shopping-cart-2-line"></i> Buy Starter Pack</a>
     </div>
 
     <div class="hero-stats">
@@ -72,137 +67,78 @@
       <div><strong>Instant</strong><span>Delivery</span></div>
     </div>
   </div>
-
 </section>
 
-
-
-<!-- ========== TRENDING OTT APPS ========== -->
-<section class="section">
-  <div class="container section-head">
-    <h2><i class="ri-fire-fill"></i> Trending OTT Apps</h2>
-  </div>
-
+<!-- TRENDING -->
+<section class="section" id="trending">
+  <div class="container section-head"><h2><i class="ri-fire-fill"></i> Trending OTT Apps</h2></div>
   <div class="container scroll-row">
-    <div class="card open-login"><img src="/uploads/Netflix.png"><p>Netflix Premium</p></div>
-    <div class="card open-login"><img src="/uploads/Hotstar.png"><p>Hotstar VIP</p></div>
-    <div class="card open-login"><img src="/uploads/AmazonPrime.png"><p>Prime Video</p></div>
-    <div class="card open-login"><img src="/uploads/Zee5.png"><p>ZEE5 All Access</p></div>
-    <div class="card open-login"><img src="/uploads/SonyLiv.png"><p>Sony LIV Premium</p></div>
+    <div class="card"><img src="/uploads/Netflix.png"><p>Netflix Premium</p><a class="buy-btn" onclick="openOrderModal('Netflix Premium')">Buy Now</a></div>
+    <div class="card"><img src="/uploads/Hotstar.png"><p>Hotstar VIP</p><a class="buy-btn" onclick="openOrderModal('Hotstar VIP')">Buy Now</a></div>
+    <div class="card"><img src="/uploads/AmazonPrime.png"><p>Prime Video</p><a class="buy-btn" onclick="openOrderModal('Prime Video')">Buy Now</a></div>
+    <div class="card"><img src="/uploads/Zee5.png"><p>ZEE5 All Access</p><a class="buy-btn" onclick="openOrderModal('ZEE5 All Access')">Buy Now</a></div>
+    <div class="card"><img src="/uploads/SonyLiv.png"><p>Sony LIV Premium</p><a class="buy-btn" onclick="openOrderModal('Sony LIV Premium')">Buy Now</a></div>
   </div>
 </section>
 
-
-
-<!-- ========== PREMIUM COLLECTIONS ========== -->
-<section class="section neon-box">
-  <div class="container section-head">
-    <h2><i class="ri-stack-fill"></i> Premium OTT Collections</h2>
-  </div>
-
+<!-- COLLECTIONS -->
+<section class="section neon-box" id="collections">
+  <div class="container section-head"><h2><i class="ri-stack-fill"></i> Premium OTT Collections</h2></div>
   <div class="collections container">
-    <div class="collection-card open-login">
-      <img src="/uploads/bannerOTT.png">
-      <h3>All OTT Combo Pack</h3>
-    </div>
-    <div class="collection-card open-login">
-      <img src="/uploads/bannerSports.png">
-      <h3>Sports OTT Pack</h3>
-    </div>
-    <div class="collection-card open-login">
-      <img src="/uploads/bannerKids.png">
-      <h3>Kids & Family Pack</h3>
-    </div>
+    <div class="collection-card"><img src="/uploads/bannerOTT.png"><h3>All OTT Combo Pack</h3><a class="buy-btn" onclick="openOrderModal('All OTT Combo Pack')">Buy Now</a></div>
+    <div class="collection-card"><img src="/uploads/bannerSports.png"><h3>Sports OTT Pack</h3><a class="buy-btn" onclick="openOrderModal('Sports OTT Pack')">Buy Now</a></div>
+    <div class="collection-card"><img src="/uploads/bannerKids.png"><h3>Kids & Family Pack</h3><a class="buy-btn" onclick="openOrderModal('Kids & Family Pack')">Buy Now</a></div>
   </div>
 </section>
 
-
-
-<!-- ========== COURSES SECTION ========== -->
+<!-- COURSES -->
 <section class="section">
-  <div class="container section-head">
-    <h2><i class="ri-graduation-cap-fill"></i> Premium Courses</h2>
-  </div>
-
+  <div class="container section-head"><h2><i class="ri-graduation-cap-fill"></i> Premium Courses</h2></div>
   <div class="grid container">
-    <div class="card2 open-login"><img src="/uploads/Course1.png"><h4>Graphic Designing Full Course</h4></div>
-    <div class="card2 open-login"><img src="/uploads/Course2.png"><h4>Video Editing Mastery</h4></div>
-    <div class="card2 open-login"><img src="/uploads/Course3.png"><h4>Freelancing Masterclass</h4></div>
-    <div class="card2 open-login"><img src="/uploads/Course4.png"><h4>Digital Marketing A-Z</h4></div>
+    <div class="card2"><img src="/uploads/Course1.png"><h4>Graphic Designing Full Course</h4><a class="buy-btn" onclick="openOrderModal('Graphic Designing Full Course')">Buy Now</a></div>
+    <div class="card2"><img src="/uploads/Course2.png"><h4>Video Editing Mastery</h4><a class="buy-btn" onclick="openOrderModal('Video Editing Mastery')">Buy Now</a></div>
+    <div class="card2"><img src="/uploads/Course3.png"><h4>Freelancing Masterclass</h4><a class="buy-btn" onclick="openOrderModal('Freelancing Masterclass')">Buy Now</a></div>
+    <div class="card2"><img src="/uploads/Course4.png"><h4>Digital Marketing A-Z</h4><a class="buy-btn" onclick="openOrderModal('Digital Marketing A-Z')">Buy Now</a></div>
   </div>
 </section>
 
-
-
-<!-- ========== EDITING TOOLS ========== -->
-<section class="section">
-  <div class="container section-head">
-    <h2><i class="ri-scissors-cut-fill"></i> Editing Tools</h2>
-  </div>
-
-  <div class="grid container">
-    <div class="card2 open-login"><img src="/uploads/Capcut.png"><h4>CapCut Pro Templates</h4></div>
-    <div class="card2 open-login"><img src="/uploads/Premiere.png"><h4>Premiere Presets</h4></div>
-    <div class="card2 open-login"><img src="/uploads/AE.png"><h4>After Effects Packs</h4></div>
-    <div class="card2 open-login"><img src="/uploads/Filmora.png"><h4>Filmora Plugins</h4></div>
-  </div>
-</section>
-
-
-
-<!-- ========== FOOTER ========== -->
+<!-- FOOTER -->
 <footer class="footer">
   <div class="container footer-grid">
-
-    <div>
-      <h3 class="logo"><i class="ri-clapperboard-fill"></i> OTT WALLAH</h3>
-      <p>India’s most premium OTT & digital store.</p>
-    </div>
-
-    <div>
-      <h4>Support</h4>
-      <p>Email: rajsarswata1@gmail.com</p>
-      <p>Contact: +91 9837777006</p>
-    </div>
-
-    <div>
-      <h4>Follow</h4>
-      <p>Instagram</p>
-      <p>YouTube</p>
-    </div>
-
+    <div><h3 class="logo"><i class="ri-clapperboard-fill"></i> OTT WALLAH</h3><p>India’s most premium OTT & digital store.</p></div>
+    <div><h4>Support</h4><p>Email: rajsarswata1@gmail.com</p><p>Contact: +91 9837777006</p></div>
+    <div><h4>Follow</h4><p>Instagram</p><p>YouTube</p></div>
   </div>
   <p class="copy">© 2025 OTT WALLAH — All Rights Reserved</p>
 </footer>
 
-
-
-<!-- ========== LOGIN MODAL ========== -->
-<div class="modal" id="loginModal">
+<!-- ORDER MODAL -->
+<div class="modal-overlay" id="orderOverlay">
   <div class="modal-box">
+    <h3>Complete your order</h3>
 
-    <button id="closeLogin" class="close-btn"><i class="ri-close-line"></i></button>
+    <label>Your Name</label>
+    <input id="orderName" placeholder="Full name" />
 
-    <h3>Login Required</h3>
-    <p>Please login to continue</p>
+    <label>Mobile Number</label>
+    <input id="orderMobile" placeholder="10-digit mobile" />
 
-    <a href="/auth/google" class="btn-google">
-      <i class="ri-google-fill"></i> Continue with Google
-    </a>
+    <label>Email (optional)</label>
+    <input id="orderEmail" placeholder="you@example.com" />
 
+    <label>Product</label>
+    <input id="orderProduct" readonly />
+
+    <div class="modal-actions">
+      <button class="btn-secondary" onclick="closeOrderModal()">Cancel</button>
+      <button class="btn-primary" onclick="placeOrder()">Place Order</button>
+    </div>
+
+    <p class="order-msg" id="orderMsg"></p>
   </div>
 </div>
 
-
-
-<!-- ====== WHATSAPP BUTTON ====== -->
-<a href="https://wa.me/919837777006?text=Hi%20OTT%20WALLAH%2C%20I%20need%20help" 
-   class="wa-float" target="_blank">
-   <i class="ri-whatsapp-fill"></i>
-</a>
-
-
 <script src="app.js"></script>
-
 </body>
 </html>
+
